# playground

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
playground/: app.py
tests/: test_app.py
