[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
profile = "black"

[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
starlette = "^0.21.0"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
